// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`#render should render a disabled toolbar-action 1`] = `
<gux-table-toolbar-action disabled="" action="export">
  <template shadowrootmode="open">
    <gux-table-toolbar-custom-action accent="secondary" disabled="">
      <span slot="text">
        Export
      </span>
      <gux-icon slot="icon" icon-name="fa/arrow-up-from-line-regular" decorative="">
      </gux-icon>
    </gux-table-toolbar-custom-action>
  </template>
</gux-table-toolbar-action>
`;

exports[`#render should render a primary toolbar-action 1`] = `
<gux-table-toolbar-action slot="primary-action" accent="primary" action="export">
  <template shadowrootmode="open">
    <gux-table-toolbar-custom-action accent="primary">
      <span slot="text">
        Export
      </span>
      <gux-icon slot="icon" icon-name="fa/arrow-up-from-line-regular" decorative="">
      </gux-icon>
    </gux-table-toolbar-custom-action>
  </template>
</gux-table-toolbar-action>
`;

exports[`#render should render delete toolbar-action 1`] = `
<gux-table-toolbar-action action="delete">
  <template shadowrootmode="open">
    <gux-table-toolbar-custom-action accent="secondary">
      <span slot="text">
        Delete
      </span>
      <gux-icon slot="icon" icon-name="fa/trash-regular" decorative="">
      </gux-icon>
    </gux-table-toolbar-custom-action>
  </template>
</gux-table-toolbar-action>
`;

exports[`#render should render export toolbar-action 1`] = `
<gux-table-toolbar-action action="export">
  <template shadowrootmode="open">
    <gux-table-toolbar-custom-action accent="secondary">
      <span slot="text">
        Export
      </span>
      <gux-icon slot="icon" icon-name="fa/arrow-up-from-line-regular" decorative="">
      </gux-icon>
    </gux-table-toolbar-custom-action>
  </template>
</gux-table-toolbar-action>
`;

exports[`#render should render import toolbar-action 1`] = `
<gux-table-toolbar-action action="import">
  <template shadowrootmode="open">
    <gux-table-toolbar-custom-action accent="secondary">
      <span slot="text">
        Import
      </span>
      <gux-icon slot="icon" icon-name="fa/file-import-regular" decorative="">
      </gux-icon>
    </gux-table-toolbar-custom-action>
  </template>
</gux-table-toolbar-action>
`;

exports[`#render should render refresh toolbar-action 1`] = `
<gux-table-toolbar-action action="refresh">
  <template shadowrootmode="open">
    <gux-table-toolbar-custom-action accent="secondary">
      <span slot="text">
        Refresh
      </span>
      <gux-icon slot="icon" icon-name="fa/arrows-rotate-regular" decorative="">
      </gux-icon>
    </gux-table-toolbar-custom-action>
  </template>
</gux-table-toolbar-action>
`;

exports[`#render should render revert toolbar-action 1`] = `
<gux-table-toolbar-action action="revert">
  <template shadowrootmode="open">
    <gux-table-toolbar-custom-action accent="secondary">
      <span slot="text">
        Revert
      </span>
      <gux-icon slot="icon" icon-name="fa/arrow-rotate-left-regular" decorative="">
      </gux-icon>
    </gux-table-toolbar-custom-action>
  </template>
</gux-table-toolbar-action>
`;
